...
    <string name="action_settings">Settings</string>

    <string name="authentication_login_error_email_empty">Enter Email</string>
    <string name="authentication_login_error_password_empty">Enter Password</string>
    <string name="authentication_credentials_wrong">Authentication failed, check your email and password or sign up</string>
    <string name="authentication_reset_error_email_empty">Enter Email</string>
    <string name="authentication_sign_up_error_email_empty">Enter Email</string>
    <string name="authentication_sign_up_error_password_empty">Enter Password</string>

    <string name="button_back">Back</string>
    <string name="button_login">Login</string>
    <string name="button_reset_password">Reset Password</string>
    <string name="button_change">Change</string>
    <string name="button_forgot_password">Forgot your password?</string>
...
